# grafana

realtime-observability/: .gitignore  README.md  USAGE.md  docker-compose.dev.yml  docker-compose.yml
realtime-observability/agent/go/: Dockerfile  agent.go  go.mod  grpc.go
realtime-observability/agent/go/example/: main.go
realtime-observability/agent/rust/: Cargo.toml  build.rs
realtime-observability/agent/rust/src/: lib.rs
realtime-observability/aggregator/: Dockerfile  go.mod  go.sum
realtime-observability/aggregator/cmd/: main.go
realtime-observability/aggregator/internal/auth/: auth.go
realtime-observability/aggregator/internal/buffer/: registry.go  ring.go
realtime-observability/aggregator/internal/export/: prometheus.go
realtime-observability/aggregator/internal/ingest/: grpc.go  server.go
realtime-observability/aggregator/internal/ws/: hub.go
realtime-observability/dashboard/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
realtime-observability/dashboard/src/: App.tsx  index.css  store.ts  ws.ts
realtime-observability/dashboard/src/charts/: ErrorRateChart.tsx  HistogramChart.tsx  LatencyChart.tsx  ThroughputChart.tsx  index.ts
realtime-observability/grafana/dashboards/: observability.json
realtime-observability/prometheus/: prometheus.yml
realtime-observability/proto/: telemetry.proto
realtime-observability/scripts/: build.sh  dev.sh  mac-deploy.sh  test-dual-node.sh
